add more projects to the project section

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                     class="subtitle is-size-4-tablet mx-auto"
                     style="max-width: 34em"
                   >
-                    I love to design and develop websites and web applications
-                    and i am passionate about it.
+                    Skilled developer designing and building high-quality
+                    websites and mobile applications.
                   </h2>
                   <div class="buttons is-centered are-medium">
                     <a class="button is-primary" href="#projects"
@@ -194,8 +194,8 @@
                   ></span>
                   <h1 class="title is-size-5 mb-2">Mobile Development</h1>
                   <p>
-                    I create quality mobile apps from scratch using the flutter
-                    and react native
+                    I create quality mobile applications from scratch using
+                    flutter and react native
                   </p>
                 </div>
               </div>
@@ -217,7 +217,7 @@
               Here is a little something about me....
             </h2>
             <div class="columns is-centered is-vcentered mt-4">
-              <div class="column is-5">
+              <div class="column is-5 mb-4">
                 <div class="box">
                   <div class="columns is-multiline">
                     <div class="column is-6">
@@ -260,9 +260,9 @@
                   <h1 class="title is-3">Hi, I am Patrick Uche</h1>
                   <p class="subtitle is-4 has-text-weight-normal">
                     I am passionate about creating web and mobile applications,
-                    i am proficient in web and mobile technologies such as
-                    HTML5, CSS3, Javascript, Bumla, Dart &amp; Flutter and an
-                    in-depth understaning of Git/Github workflow
+                    proficient in web and mobile technologies such as HTML5,
+                    CSS3, Javascript, Bumla, Dart &amp; Flutter and an in-depth
+                    understaning of Git/Github workflow
                   </p>
                 </div>
               </div>
@@ -289,7 +289,11 @@
               >
                 <div class="project">
                   <div
-                    style="background-image: url('./img/bookify.png')"
+                    style="
+                      background-image: url('./img/patudash.png');
+
+                      background-size: cover;
+                    "
                     class="project-image"
                   ></div>
                   <div class="overlayer">
@@ -297,11 +301,11 @@
                       <h1
                         class="title is-size-5 is-size-4-widescreen has-text-white"
                       >
-                        Bookify Website
+                        Patudash
                       </h1>
                       <a
                         class="button is-white is-outlined is-rounded"
-                        href="/"
+                        href="https://patudash.netlify.app/"
                         target="_blank"
                         ><span>Visit Website</span
                         ><span class="icon"
@@ -316,7 +320,11 @@
               >
                 <div class="project">
                   <div
-                    style="background-image: url('./img/investment.png')"
+                    style="
+                      background-image: url('./img/patutechz.png');
+                      background-position: center;
+                      background-size: cover;
+                    "
                     class="project-image"
                   ></div>
                   <div class="overlayer">
@@ -324,11 +332,11 @@
                       <h1
                         class="title is-size-5 is-size-4-widescreen has-text-white"
                       >
-                        Investment Website
+                        Patutechz Website
                       </h1>
                       <a
                         class="button is-white is-outlined is-rounded"
-                        href="/"
+                        href="https://patutechz.netlify.app/"
                         target="_blank"
                         ><span>Visit Website</span
                         ><span class="icon"
@@ -343,7 +351,9 @@
               >
                 <div class="project">
                   <div
-                    style="background-image: url('./img/nft.png')"
+                    style="background-image: url('./img/Studypal.png');
+                    background-position: center;
+                    background-size: cover;"
                     class="project-image"
                   ></div>
                   <div class="overlayer">
@@ -351,11 +361,96 @@
                       <h1
                         class="title is-size-5 is-size-4-widescreen has-text-white"
                       >
-                        NFT Website
+                        StudyPal
                       </h1>
                       <a
                         class="button is-white is-outlined is-rounded"
-                        href="/"
+                        href="https://studypalz.netlify.app/"
+                        target="_blank"
+                        ><span>Visit Website</span
+                        ><span class="icon"
+                          ><i class="fas fa-angle-right"></i></span
+                      ></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="column is-12-mobile is-half-tablet is-one-third-desktop"
+              >
+                <div class="project">
+                  <div
+                    style="background-image: url('./img/Viola.png');
+                    background-position: center;
+                    background-size: cover;"
+                    class="project-image"
+                  ></div>
+                  <div class="overlayer">
+                    <div class="project-text">
+                      <h1
+                        class="title is-size-5 is-size-4-widescreen has-text-white"
+                      >
+                        Viola Travel
+                      </h1>
+                      <a
+                        class="button is-white is-outlined is-rounded"
+                        href="https://violatravelandtours.netlify.app/"
+                        target="_blank"
+                        ><span>Visit Website</span
+                        ><span class="icon"
+                          ><i class="fas fa-angle-right"></i></span
+                      ></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="column is-12-mobile is-half-tablet is-one-third-desktop"
+              >
+                <div class="project">
+                  <div
+                    style="background-image: url('./img/dashboard.png')"
+                    class="project-image"
+                  ></div>
+                  <div class="overlayer">
+                    <div class="project-text">
+                      <h1
+                        class="title is-size-5 is-size-4-widescreen has-text-white"
+                      >
+                        Dashboard
+                      </h1>
+                      <a
+                        class="button is-white is-outlined is-rounded"
+                        href="https://patutechz-dashboard.netlify.app/"
+                        target="_blank"
+                        ><span>Visit Website</span
+                        ><span class="icon"
+                          ><i class="fas fa-angle-right"></i></span
+                      ></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="column is-12-mobile is-half-tablet is-one-third-desktop"
+              >
+                <div class="project">
+                  <div
+                    style="background-image: url('./img/Education.png');
+                    background-position: center;
+                    background-size: cover;"
+                    class="project-image"
+                  ></div>
+                  <div class="overlayer">
+                    <div class="project-text">
+                      <h1
+                        class="title is-size-5 is-size-4-widescreen has-text-white"
+                      >
+                        Education Website
+                      </h1>
+                      <a
+                        class="button is-white is-outlined is-rounded"
+                        href="https://education-patutechz.netlify.app/"
                         target="_blank"
                         ><span>Visit Website</span
                         ><span class="icon"
@@ -397,7 +492,8 @@
                 <div class="level-right">
                   <div class="level-item">
                     <button
-                      class="button is-white is-rounded is-outlined is-medium" @click="openModal = true"
+                      class="button is-white is-rounded is-outlined is-medium"
+                      @click="openModal = true"
                     >
                       Contact me!
                     </button>
@@ -460,7 +556,9 @@
           </div>
         </div>
       </footer>
-      <a class="link-button"><i class="fab fa-whatsapp"></i></a>
+      <a @click="openModal = true" class="link-button"
+        ><i class="fab fa-whatsapp"></i
+      ></a>
       <div class="modal" :class="{ 'is-active': openModal }">
         <div class="modal-background" @click="openModal = false"></div>
         <div class="modal-content">
@@ -504,7 +602,10 @@
             </div>
           </div>
         </div>
-        <button class="modal-close is-large" @click="openModal = false"></button>
+        <button
+          class="modal-close is-large"
+          @click="openModal = false"
+        ></button>
       </div>
     </div>
     <script type="text/javascript" src="lib/alpine.js"></script>
